<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginRight="40dp"
    >

    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="15dp"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            app:layout_widthPercent="50%"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"/>
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/user_last_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/grey_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/user_email"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/grey_background"
                android:layout_width="match_parent"
                android:layout_height="52dp" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"/>
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/user_company"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/grey_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>
            <Spinner
                android:id="@+id/user_spinner_category"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/drop_down"
                android:spinnerMode="dropdown" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tee_sheert"/>
            <Spinner
                android:id="@+id/user_spinner_tee_shirt"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/drop_down"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:orientation="vertical"
            app:layout_widthPercent="50%"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"/>
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/user_first_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/grey_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"/>
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/user_phone"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/grey_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/function"/>
            <EditText
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/user_function"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/grey_background"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/race_type"/>
            <Spinner
                android:id="@+id/user_race_type"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/drop_down"
                android:spinnerMode="dropdown" />
            <TextView
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kit_type"/>
            <Spinner
                android:id="@+id/user_kit_type"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/drop_down"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </android.support.percent.PercentRelativeLayout>

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/terms_and_conditions"
            />
    </LinearLayout>

    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:layout_marginStart="5dp"
            app:layout_heightPercent="5%"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/signature"/>
        <ro.fsecure.cros.f_secureaplicatiadeintrarelacors.view.SignatureView
            android:id="@+id/signatureView"
            app:layout_heightPercent="70%"
            android:layout_width="match_parent"
            android:layout_height="0dp"
             />
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <Button
            android:layout_centerInParent="true"
            android:textColor="@color/white_color"
            android:id="@+id/confirm_button"
            app:layout_widthPercent="60%"
            android:layout_width="0dp"
            android:textSize="27sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:background="@drawable/confirm_button"
            android:text="@string/confirm_button" />
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>