<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:gravity="center"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:text="@string/contest_number"/>

        <TextView
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contest_number"
            android:text="135"
            android:textSize="300sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LinearLayout1"
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categoria: "
            android:textAllCaps="true"
            android:textSize="40sp"
            />
        <TextView
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:id="@+id/race_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="40sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LinearLayout2"
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
            android:text="CURSA: "
            android:textAllCaps="true"
            android:textSize="40sp"
            />
        <TextView
            android:id="@+id/race_type"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="40sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LinearLayout3"
        android:id="@+id/LinearLayout4"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:text="@string/succes_string_1"
            android:textColor="@color/pink"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:text="@string/succes_string_2"
            android:textColor="@android:color/background_dark"
            />
    </LinearLayout>

    <Button
        android:textColor="@color/white_color"
        android:id="@+id/confirm_button"

        android:layout_width="200dp"
        android:layout_height="80dp"

        android:textSize="27sp"
        android:textStyle="bold"
        android:background="@drawable/confirm_button"
        android:text="@string/back"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>